# rustyfoot

./: .gitignore  Cargo.toml  Makefile  POST_INSTALL.md  default-profile.json  mod-ui.sh
debian/: changelog  control  copyright  postinst  postrm  rules  rustyfoot.service
html/: allguis.html  desktop-pp.html  desktop-tou.html  icon.html  index.html  pedalboard.html  settings.html
html/css/: dashboard.css  main.css
html/css/less/: main.less  pedalboards.less
html/img/favicon/: manifest.json
html/include/: pedalboard.html
html/js/: cloudplugin.js  desktop.js  effects.js  file_manager.js  host.js  installation.js  pedalboard.js  pedalboards.js  tone3000.js  upgrade.js
mod/: hmi.py  host.py  mod_protocol.py  session.py  settings.py  webserver.py
src/: addressings.rs  bank.rs  development.rs  hmi.rs  lv2_utils.rs  main.rs  midi_calibration.rs  mod_protocol.rs  plugin_cache.rs  profile.rs  protocol.rs  recorder.rs  screenshot.rs  session.rs  settings.rs  template.rs  tempo.rs  tuner.rs  utils.rs
src/communication/: crypto.rs  device.rs  mod.rs  token.rs
src/host/: connections.rs  ipc.rs  mapper.rs  mod.rs  pedalboard.rs  plugin.rs  transport.rs
src/store/: hydrogen.rs  mod.rs  musical_artifacts.rs  patchstorage.rs  tone3000.rs
src/web/handlers/: auth.rs  bank.rs  effect.rs  favorites.rs  filebrowser.html  filebrowser.rs  files.rs  jack.rs  midi_calibration.rs  misc.rs  mod.rs  pedalboard.rs  recording.rs  snapshot.rs  store.rs  system.rs  templates.rs  websocket.rs
tools/: lv2-remove-unused  lv2-used-bundles
