[package]
name = "rustyfoot"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-ws = "0.3"
actix-multipart = "0.7"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
urlencoding = "2"
dirs = "6"
libc = "0.2"
base64 = "0.22"
rsa = "0.9"
aes = "0.8"
eax = "0.5"
sha1 = { version = "0.10", features = ["oid"] }
rand = "0.8"
libloading = "0.8"
mime_guess = "2"
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
notify = "7"
